# server/routes/employeeRoute.js
@@ -1,5 +1,5 @@
 import express from 'express';
-import {createLeaveRequest,getLeaveRequests,modifyLeaveRequest,deleteLeaveRequest,} from '../controllers/employeeController.js';
+import {createLeaveRequest,getLeaveRequests,modifyLeaveRequest,deleteLeaveRequest,getProfile} from '../controllers/employeeController.js';
 import { userAuthentication } from "../middlewares/authMiddleware.js";
 
 const router = express.Router();
@@ -10,5 +10,6 @@ router.post('/leaves', userAuthentication(), createLeaveRequest);
 router.get('/leaves', userAuthentication(), getLeaveRequests);
 router.patch('/leaves/:leave_id', userAuthentication(), modifyLeaveRequest);
 router.delete('/leaves/:leave_id', userAuthentication(), deleteLeaveRequest);
+router.get('/profile', userAuthentication(), getProfile);
 
 export default router;
